# nterm

./: CMakeLists.txt  EventHandler.cpp  EventHandler.h  LeftContainer.qml  Main.qml  Notes.qml  README.md  filedb.cpp  filedb.h  fonts.qrc  icons.qrc  linux-pkg.deb  main.cpp  run_build_linux.sh
linux-pkg/DEBIAN/: control
linux-pkg/usr/share/applications/: nterm.desktop
qml/: EditorBtn.qml  EditorToolbar.qml  FolderList.qml  LeftContainer.qml  Main.qml  NoteList.qml  NoteView.qml
source/: Constants.cpp  Constants.h  EventHandler.cpp  EventHandler.h  Filedb.cpp  Filedb.h  PopupHandler.cpp  PopupHandler.h  main.cpp
